<resources>
    <string name="app_name">Looper</string>
    <string name="facebook_app_id">461895427316604</string>
    <string name="SHARED_PREFS">org.mckayscience.looper.PREFS</string>

    //main activity
    <string name="guest_button">Guest</string>

    <string name="action_settings">Settings</string>
    //main menu
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="main_menu_title">Android Looper</string>
    <string name="main_menu_create">Create Song</string>
    <string name="main_menu_load">Load Song</string>
    <string name="main_menu_share">Share Song</string>
    <string name="main_menu_logout">Logout</string>
    <string name="share_dialog_message">Please enter the ID of the user \nyou wish to share a song with.\n</string>
    //create song
    <string name="song_name_text">Please enter a name for the song.</string>
    <string name="song_name_edit">Song Name</string>
    <string name="song_name_okbtn">Create</string>
    <string name="song_name_cancelbtn">Cancel</string>

    //Looper activity
    <string name="title_activity_looper">LooperActivity</string>
    <string name="title_activity_song_name">SongName</string>
    <string name="to_record">Press to Record</string>
    <string name="to_delete">Delete</string>
    <string name="to_menu">Menu</string>
    <string name="to_save">Save</string>
    <string name="dialog_message">Song is not saved.\n\nExit anyways?</string>
    <string name="dialog_click">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="song_name_looper">Song name</string>

    <string name="title_activity_load">LoadActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
