

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.iinspirestudios.looperapp2.MainMenu"
    android:background="@drawable/mainmenujpg">


    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:scaleType="fitCenter"
        android:text="@string/main_menu_logout"
        android:id="@+id/guest_logout"
        android:onClick="logout"
        android:textStyle="bold"
        android:layout_above="@+id/main_menu_userID"
        android:layout_centerInParent="true" />




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:textSize="16dp"
        android:textStyle="bold"
        android:id="@+id/main_menu_userID"
        android:text="UserID"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerInParent="true"
        android:gravity="top|center_horizontal">

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:scaleType="fitCenter"
            android:text="@string/main_menu_create"
            android:id="@+id/createSong_Btn_ID"
            android:onClick="createSong_onClick"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:alpha="1" />

        <Button
            android:textStyle="bold"

            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:scaleType="fitCenter"
            android:text="@string/main_menu_share"
            android:id="@+id/share_Song_Btn_ID"
            android:onClick="shareSong_onClick"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:scaleType="fitCenter"
            android:text="@string/main_menu_load"
            android:id="@+id/load_Btn_ID"
            android:onClick="loadSong_onClick"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"
            />
    </LinearLayout>


</RelativeLayout>
